--- a/public/style.css
+++ b/public/style.css
@@ -163,7 +163,7 @@ body.modal-open {
     width: 100%;
     height: 100%;
     z-index: 0;
-    opacity: 0.9;
+    opacity: 1.0;  /* Aumentado para 100% de visibilidade */
 }
 
 .fundo {
